<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LoginFragment">
    <!-- Arka Plan Resmi -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/background_image"
        android:contentDescription="@string/background_image_desc"/>

    <!-- Şeffaf Overlay -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/overlay_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:background="@drawable/edit_text_background"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:padding="16dp"
            android:background="@drawable/edit_text_background"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:layout_marginTop="24dp"/>


        <TextView
            android:id="@+id/signupTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="16dp"
            android:textSize="16sp"/>

    </LinearLayout>

</RelativeLayout>
